--- a/R Basics.Rmd
+++ b/R Basics.Rmd
@@ -197,8 +197,8 @@ for (name in names) {
 or alternatively, loop over the index of the vector:
 ```{r}
 for (i in 1:4) {
-  N = nchar(name[i])
-  print (paste(name[i],":",N,"characters"))
+  N = nchar(names[i])
+  print (paste(names[i],":",N,"characters"))
 }
 ```
 or use while instead of loop
@@ -206,8 +206,8 @@ or use while instead of loop
 ```{r}
 i=1
 while (i<=4){
-  N = nchar(name[i])
-  print (paste(name[i],":",N,"characters"))
+  N = nchar(names[i])
+  print (paste(names[i],":",N,"characters"))
   i=i+1 #counter
 }
 ```
